openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore-project
  labels:
    app: bookstore
    environment: dev
